--- a/COVID19.html
+++ b/COVID19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-<title> Hunter College Biology Major Syllabi Bank</title>
+<title> COVID-19 RIsk of Worst Outcome Calculator</title>
 <link rel="stylesheet" href="style_covid_19.css">	
 </head>
 <body>
