--- a/COVID19.html
+++ b/COVID19.html
@@ -68,7 +68,7 @@
         <td><input id="Kidney_Disease" name="Kidney_Disease" type="number" min="1" max="2" /></td>
       </tr>
       <tr>
-        <td>High Blood Presure: If Yes, put 2, If No, put 1</td>
+        <td>High Blood Pressure: If Yes, put 2, If No, put 1</td>
         <td><input id="Hypertension" name="Hypertension" type="number" min="1" max="2" /></td>
       </tr>
       <tr>
@@ -80,7 +80,7 @@
         <td><input id="Liver_Disease" name="Liver" type="number" min="1" max="2" /></td>
       </tr>
       <tr>
-        <td> Rheumatoid Arthiritis: If Yes, put 2, If No, put 1</td>
+        <td> Rheumatoid Arthritis: If Yes, put 2, If No, put 1</td>
         <td><input id="Rheumatoid" name="Rheumatoid" type="number"  min="1" max="2"/></td>
       </tr>
       <tr>
@@ -88,7 +88,7 @@
         <td><input id="BMI_1" name="BMI" type="number"  /></td>
       </tr>
       <tr>
-        <td>Vitamin D Level:Pleae put your Vitamin D level in ng/mL. If no value is available: Please Write 0</td>
+        <td>Vitamin D Level: Please put your Vitamin D level in ng/mL. If no value is available: Please Write 0</td>
         <td><input id="Vitamin_D" name="Vitamin_D" type="number" /></td>
       </tr>
       <tr>
